dark mode added, minor fixes, javascript created, main structure complete, to do: form

--- a/css/style-principal-page.css
+++ b/css/style-principal-page.css
@@ -3,6 +3,17 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=DM+Serif+Display:ital@0;1&display=swap');
 
 
+* {
+    margin: 0;
+    box-sizing: border-box;
+    font-weight: 400;
+}
+    
+body {
+    background-color: #F3E5D8;
+    transition: 0.3s;
+}
+
 h1,h2,h3,h4 {
     font-family: "DM Serif Display";
 }
@@ -31,15 +42,6 @@ a {
     font-size: 16px;
     font-weight: 300;
 }
-* {
-    margin: 0;
-    box-sizing: border-box;
-    font-weight: 400;
-}
-
-body {
-    background-color: #F3E5D8;
-}
 
 nav {
     padding: 10px 20px;
@@ -56,9 +58,19 @@ nav #logo {
     margin: 0;
 }
 
+nav div {
+    display: flex;
+    align-items: center;
+}
  nav a {
     text-decoration: none;
     color: white;
+}
+
+nav #dark-mode {
+    margin-left: 10px;
+    align-self: center;
+    height: 34px;
 }
 
 header {
@@ -77,9 +89,7 @@ header {
 
 header h1 {
     color: white;
-    background-color: rgba(0, 0, 0, 0.199);
     font-size: 64px;
-    padding: 106.5px 560.094px 106.5px 0;
     border-radius: 5px;
 }
 
@@ -98,12 +108,12 @@ main div.grid-container {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr;
+    gap: 20px;
 }
 
 main div.grid-container div.recipe {
     background-color: white;
     padding: 10px;
-    margin: 10px;
     border-radius: 5px;
     transition: 0.5s;
 }
@@ -111,13 +121,7 @@ main div.grid-container div.recipe {
 main div.grid-container div.recipe:hover {
     transform: scale(1.1);
 }
-#recipeA,#recipeD {
-    margin-left: 0;
-}
 
-#recipeC,#recipeF {
-    margin-right: 0;
-}
 
 main div.grid-container div.recipe a {
     text-decoration: none;
@@ -147,4 +151,38 @@ footer {
 footer .footer {
     color: white;
     margin: 0;
+}
+
+.dark-mode{
+    color: white;
+    background-color: black;
+}
+
+.dark-mode h3 {
+    color: white;
+}
+.dark-mode li {
+    color: white;
+}
+.dark-mode h2 {
+    color: white;
+}
+.dark-mode h3 {
+    color: white;
+}
+.dark-mode div.grid-container div.recipe {
+    color: white;
+    background-color: #2F2F2F;
+}
+
+@media (max-width: 700px) {
+    main div.grid-container {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+@media (max-width: 400px) {
+    main div.grid-container {
+        grid-template-columns: 1fr;
+    }
 }
